--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <img class="footer-logo-img" src="/assets/icon/Corazon.png" alt="Logo Corazon">
         <div class="footer-logo-text">AluraGeek</div>
     </div>
-    <p>Desarrollado por LUIS MIGUEL GJ</p>
+    <p>Desarrollado por JULIO RODRIGUEZ</p>
     <p>&copy; 2024. Alura Latam</p>
 </footer>
 </html>
